--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "name": "dataTable",
   "description": "dataTable",
   "version": "1.0.0",
-  "author": "Khang Pham",
+  "author": "vkphambn@gmail.com",
   "license": "UNLICENSED",
   "repository": {},
   "private": true,
